--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="Ícones/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <title>Jornal Turma 00U13027</title>
+    <title>2ª Edição - Jornal - Turma 13027 </title>
 </head>
 <body>
     <header id="Header">
