--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt_BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -48,9 +48,11 @@
     </header>
     <main>
         <h1 id="Opção1">Matérias estudadas</h1>
+        <p style="text-align: center; margin: 1.5em">No <b>Módulo 2</b> o conteúdo foi ensinado de um método diferente, os próprios alunos foram os professores...</p>
         <div class="Conteudo">
             <div class="Texto">
                 <h1>História da Matemática</h1>
+                <img class="Apresentações" src="Imagens/ApresentaçãoHistória.webp" alt="Apresentações">
                 <div class="Individual">
                     <div class="Texto">
                         <p>A matemática surgiu há muito mais tempo que imaginamos. Ela foi criada por um grupo de pessoa através da necessidade de contar ,ter o controle de terras e a precisão de construção. Um detalhe também bastante interessante, é que a matemática veio evoluindo de uma maneira extraordinária, desde símbolos de animais até em numeros e letras.</p>
@@ -174,6 +176,7 @@
         <div class="Conteudo">
             <div class="Texto">
                 <h1>Grandezas, razão e proporção</h1>
+                <img class="Apresentações" src="Imagens/ApresentaçãoGrandezas.webp" alt="Apresentações">
                 <div class="Individual Invertida">
                     <div class="Texto">
                         <h2>Grandezas</h2>
@@ -222,8 +225,28 @@
         </div>
         <div class="Conteudo">
             <div class="Texto">
-                <h1>Grandezas, razão e proporção</h1>
+                <h1>Matemática Finaceira</h1>
+                <img class="Apresentações" src="Imagens/ApresentaçãoEducação.webp" alt="Apresentações">
                 <div class="Individual">
+                    <div class="Texto">
+                        <h2>Educação Financeira</h2>
+                        <p>
+                            A <b>educação financeira</b> se trata de tudo aquilo que envolve saber gerenciar seu dinheiro, desde os gastos até investimentos. Podemos ver exemplos disso quando você: <br>
+                            - Verifica o que realmente é necessário e corta os gastos desnecessários; <br>
+                            - Calcula juros para ver se compensa comprar algo; <br>
+                            - Procura sobre novos métodos de investimentos; <br>
+                            - Compra ações de uma empresa; <br>
+                            - etc; <br>
+                            Por vivemos em um mundo que possui esse sistema de arrecadação e utilização de dinheiro, é importante sabermos lidar com ele, pois da mesma forma que ele nos beneficia, ele também pode prejudicar-nos.
+                        </p>
+                    </div>
+                    <div class="Imagem">
+                        <img src="Imagens/EducaçãoFinanceira.webp" alt="Educação Finaceira">
+                        <p>Imagem por <a rel="noopener" href="https://respostas.sebrae.com.br/o-que-e-afinal-educacao-financeira-e-como-desenvolver-essa-area-na-sua-vida/" target="_blank">Sebrae</a></p>
+                    </div>
+                </div>
+                <img class="Apresentações" src="Imagens/ApresentaçãoJurosSimpĺes.webp" alt="Apresentações">
+                <div class="Individual Invertida">
                     <div class="Texto">
                         <h2>Juros Simples</h2>
                         <p>
@@ -241,7 +264,8 @@
                         <p>Imagem por <a rel="noopener" href="https://matematicafinanceira.org/juros-simples/" target="_blank">Matemática Financeira</a></p>
                     </div>
                 </div>
-                <div class="Individual Invertida">
+                <img class="Apresentações" src="Imagens/ApresentaçãoJurosCompostos.webp" alt="Apresentações">
+                <div class="Individual">
                     <div class="Texto">
                         <h2>Juros Compostos</h2>
                         <p>
@@ -260,7 +284,7 @@
             Roda de Notícias
         </h1>
         <div id="Redação">
-            <div class="Noticia">
+            <div class="Noticia Invertida">
                 <div class="Texto">
                     <h1>Missão DART</h1>
                     <p>Nasa envia sonda para atingir asteróide Dimorphos como forma de tentar desviar sua rota, ainda não se tem notícia se a missão foi bem sucedida. O objetivo dos testes é poder evitar situações em que a Terra esteja na rota de algum detrito espacial. Futuramente mais missões serão realizadas para aprimorar esse "sistema de defesa espacial".</p>
@@ -270,7 +294,7 @@
                     <p class="Legenda">Reprodução / Nasa</p>
                 </div>
             </div>
-            <div class="Noticia Invertida">
+            <div class="Noticia">
                 <div class="Texto">
                     <h1>Apple X Ministério da Justiça</h1>
                     <p>O Ministério da Justiça brasileiro multou a fabricante Apple em 12 milhões de reais e suspendeu a venda de seus smartphones do país. A decisão surgiu após a fabricante <b>comercializar os aparelhos sem o carregador</b> alegando ser uma medida para <b>reduzir a emissão de CO2</b>, entretanto a Justiça prevê tal ato como uma <b>venda casada</b>, ato que é proibido em lei no Brasil.</p>
@@ -280,7 +304,7 @@
                     <p class="Legenda">Reprodução / Apple</p>
                 </div>
             </div>
-            <div class="Noticia">
+            <div class="Noticia Invertida">
                 <div class="Texto">
                     <h1>Open Source, futuro dos softwares ou um risco à segurança?</h1>
                     <p>Recentemente o uso da palavra <b>open source</b> vem se popularizando cada vez mais, a mesma se refere a programas que possuem seu código fonte aberto para que qualquer um veja. <br> Sendo uma modalidade mais usada do que imaginamos, podemos ver ela no Linux quepor sua vez é a base dos celulares com Android, servidores, nossa urna eletrônica e diversos outros eletrotônicos, em especial aqueles que têm recursos limitados. <br> O uso de sistemas com código aberto pode trazer inseguranças devido o fato de pessoas más intencionadas terem fácil acesso, entretanto o código pode também aprimorado por aqueles que buscam o melhor do sistema.</p>
@@ -329,6 +353,10 @@
             </div>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/g6bJgBkWB1E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
+        <!-- <div id="Integrantes">
+            <h2 id="Opção5">Integrantes da turma</h2>
+            <img src="#" alt="Integrantes da Turma">
+        </div> -->
     </main>
     <footer>
         <div id="LogoRedesSociais">
