--- a/index.html
+++ b/index.html
@@ -352,6 +352,12 @@
                 <p>Seu pet nunca vai entender porque você nunca voltou para casa...</p>
             </div>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/g6bJgBkWB1E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+            <h3 style="margin: 1em;">Fotos da palestra</h3>
+
+            <img class="Palestras" src="Imagens/Palestra1.webp" alt="Palestras">
+            <img class="Palestras" src="Imagens/Palestra2.webp" alt="Palestras">
+            <img class="Palestras" src="Imagens/Palestra3.webp" alt="Palestras">
         </div>
         <!-- <div id="Integrantes">
             <h2 id="Opção5">Integrantes da turma</h2>
