--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             Jornal Digital
         </h1> <br>
         <div id="LogoSubtitulos">
-            <a href="https://www.espro.org.br/" rel="noopener" target="_blank"><img src="Ícones/LogoEspro.png" alt="Logo Espro" loading="lazy"></a>
+            <a href="https://www.espro.org.br/" rel="noopener" target="_blank"><img src="Ícones/LogoEspro.webp" alt="Logo Espro" loading="lazy"></a>
             <div id="Subtitulos">
                 <h2>
                     Turma 00U13027
@@ -22,7 +22,7 @@
                 <h2>
                     2ª edição
                 </h2>
-                <a href="#Header"><img id="InícioBotão" src="Ícones/Seta.png" alt="BotãoAuxiliar" loading="lazy"></img></a>
+                <a href="#Header"><img id="InícioBotão" src="Ícones/Seta.webp" alt="BotãoAuxiliar" loading="lazy"></img></a>
             </div>
         </div>
         <nav>
@@ -52,13 +52,19 @@
         <div class="Conteudo">
             <div class="Texto">
                 <h1>História da Matemática</h1>
-                <img class="Apresentações" src="Imagens/ApresentaçãoHistória.webp" alt="Apresentações" loading="lazy">
+                <picture loading="lazy">
+                    <source media="(max-width: 650px)" srcset="Imagens/ImagensPequenas/ApresentaçãoHistória.webp">
+                    <img class="Apresentações" src="Imagens/ApresentaçãoHistória.webp" alt="Apresentações">
+                </picture>
                 <div class="Individual">
                     <div class="Texto">
                         <p>A matemática surgiu há muito mais tempo que imaginamos. Ela foi criada por um grupo de pessoa através da necessidade de contar ,ter o controle de terras e a precisão de construção. Um detalhe também bastante interessante, é que a matemática veio evoluindo de uma maneira extraordinária, desde símbolos de animais até em numeros e letras.</p>
                     </div>
                     <div class="Imagem">
-                        <img src="Imagens/História.webp" alt="História da Matemática" loading="lazy">
+                        <picture loading="lazy">
+                            <source media="(max-width: 650px)" srcset="Imagens/ImagensPequenas/História.webp">
+                            <img class="Apresentações" src="Imagens/História.webp" alt="História da Mate">
+                        </picture>
                         <p>Imagem por <a rel="noopener" href="https://geniodamatematica.com.br/historia-da-matematica-2/" target="_blank">Gênio da Matemática</a></p>
                     </div>
                 </div>
@@ -67,7 +73,10 @@
                         <p>Sendo muito importante na contabilidade de produtos e até construção de grandes monumentos, tendo diversos documentos mostrando sua existência ao longo da história.</p>
                     </div>
                     <div class="Imagem">
-                        <img src="Imagens/Egito.webp" alt="Matemática no Egito" loading="lazy">
+                        <picture loading="lazy">
+                            <source media="(max-width: 650px)" srcset="Imagens/ImagensPequenas/Egito.webp">
+                            <img class="Apresentações" src="Imagens/Egito.webp" alt="Matemática no Egito">
+                        </picture>
                         <p>Imagem por <a rel="noopener" href="https://meuartigo.brasilescola.uol.com.br/matematica/o-sistema-numeracao-egipcio.htm target="_blank">Brasil Escola</a></p>
                     </div>
                 </div>
@@ -132,7 +141,10 @@
                         </p>
                     </div>
                     <div class="Imagem">
-                        <img src="Imagens/Multiplicação.webp" alt="Multiplicação" loading="lazy">
+                        <picture loading="lazy">
+                            <source media="(max-width: 650px)" srcset="Imagens/ImagensPequenas/Multiplicação.webp">
+                            <img class="Apresentações" src="Imagens/Multiplicação.webp" alt="Multiplicação">
+                        </picture>
                         <p>Imagem por <a rel="noopener" href="https://www.bbc.com/portuguese/geral-42118600" target="_blank">BBC News</a></p>
                     </div>
                 </div>
@@ -147,7 +159,10 @@
                         </p>
                     </div>
                     <div class="Imagem">
-                        <img src="Imagens/Divisão.webp" alt="Divisão" loading="lazy">
+                        <picture loading="lazy">
+                            <source media="(max-width: 650px)" srcset="Imagens/ImagensPequenas/Divisão.webp">
+                            <img class="Apresentações" src="Imagens/Divisão.webp" alt="Divisão">
+                        </picture>
                         <p>Imagem por <a rel="noopener" href="https://www.preparaenem.com/matematica/divisao.htm" target="_blank">Prepara Enem</a></p>
                     </div>
                 </div>
@@ -176,7 +191,10 @@
         <div class="Conteudo">
             <div class="Texto">
                 <h1>Grandezas, razão e proporção</h1>
-                <img class="Apresentações" src="Imagens/ApresentaçãoGrandezas.webp" alt="Apresentações" loading="lazy">
+                <picture loading="lazy">
+                    <source media="(max-width: 650px)" srcset="Imagens/ImagensPequenas/ApresentaçãoGrandezas.webp">
+                    <img class="Apresentações" src="Imagens/ApresentaçãoGrandezas.webp" alt="Apresentações">
+                </picture>
                 <div class="Individual Invertida">
                     <div class="Texto">
                         <h2>Grandezas</h2>
@@ -226,7 +244,10 @@
         <div class="Conteudo">
             <div class="Texto">
                 <h1>Matemática Finaceira</h1>
-                <img class="Apresentações" src="Imagens/ApresentaçãoEducação.webp" alt="Apresentações" loading="lazy">
+                <picture loading="lazy">
+                    <source media="(max-width: 650px)" srcset="Imagens/ImagensPequenas/ApresentaçãoEducação.webp">
+                    <img class="Apresentações" src="Imagens/ApresentaçãoEducação.webp" alt="Apresentações">
+                </picture>
                 <div class="Individual">
                     <div class="Texto">
                         <h2>Educação Financeira</h2>
@@ -245,7 +266,10 @@
                         <p>Imagem por <a rel="noopener" href="https://respostas.sebrae.com.br/o-que-e-afinal-educacao-financeira-e-como-desenvolver-essa-area-na-sua-vida/" target="_blank">Sebrae</a></p>
                     </div>
                 </div>
-                <img class="Apresentações" src="Imagens/ApresentaçãoJurosSimpĺes.webp" alt="Apresentações" loading="lazy">
+                <picture loading="lazy">
+                    <source media="(max-width: 650px)" srcset="Imagens/ImagensPequenas/ApresentaçãoJurosSimpĺes.webp">
+                    <img class="Apresentações" src="Imagens/ApresentaçãoJurosSimpĺes.webp" alt="Apresentações">
+                </picture>
                 <div class="Individual Invertida">
                     <div class="Texto">
                         <h2>Juros Simples</h2>
@@ -264,7 +288,10 @@
                         <p>Imagem por <a rel="noopener" href="https://matematicafinanceira.org/juros-simples/" target="_blank">Matemática Financeira</a></p>
                     </div>
                 </div>
-                <img class="Apresentações" src="Imagens/ApresentaçãoJurosCompostos.webp" alt="Apresentações" loading="lazy">
+                <picture loading="lazy">
+                    <source media="(max-width: 650px)" srcset="Imagens/ImagensPequenas/ApresentaçãoJurosCompostos.webp">
+                    <img class="Apresentações" src="Imagens/ApresentaçãoJurosCompostos.webp" alt="Apresentações">
+                </picture>
                 <div class="Individual">
                     <div class="Texto">
                         <h2>Juros Compostos</h2>
@@ -322,7 +349,10 @@
             <div class="Texto">
                 <h1>À Procura da Felicidade</h1><br>
                 <div class="ImagemFilme">
-                    <img src="Imagens/Filme.webp" alt="À Procura da Felicidade" loading="lazy">
+                    <picture loading="lazy">
+                        <source media="(max-width: 650px)" srcset="Imagens/ImagensPequenas/Filme.webp">
+                        <img class="Apresentações" src="Imagens/Filme.webp" alt="À Procura da Felicidade">
+                    </picture>
                     <p class="Legenda">Reprodução / À Procura da Felicidade - Columbia Pictures</p>
                 </div>
                 <h2>Apresentação</h2>
@@ -340,7 +370,10 @@
             <p>
                 Em respeito ao <b>Setembro Amarelo</b> trouxemos algumas frases em favor da vida, afinal é o bem mais importante que temos.
             </p>
-            <img class="ImagemCampanha" src="Imagens/SetembroAmarelo.webp" alt="Campanha Setembro Amarelo" loading="lazy">
+            <picture loading="lazy">
+                <source media="(max-width: 650px)" srcset="Imagens/ImagensPequenas/SetembroAmarelo.webp">
+                <img class="Apresentações" src="Imagens/SetembroAmarelo.webp" alt="Campanha Setembro Amarelo">
+            </picture>
             
             <div id="Mensagens">
                 <p>Você é capaz sim...</p>
@@ -355,9 +388,16 @@
 
             <h3 style="margin: 1em;">Fotos da palestra</h3>
 
-            <img class="Palestras" src="Imagens/Palestra1.webp" alt="Palestras" loading="lazy">
-            <img class="Palestras" src="Imagens/Palestra2.webp" alt="Palestras" loading="lazy">
-            <img class="Palestras" src="Imagens/Palestra3.webp" alt="Palestras" loading="lazy">
+            <picture loading="lazy">
+                <source media="(max-width: 650px)" srcset="Imagens/ImagensPequenas/Palestra1.webp">
+                <img class="Apresentações" src="Imagens/Palestra1.webp" alt="Palestras">
+            </picture><picture loading="lazy">
+                <source media="(max-width: 650px)" srcset="Imagens/ImagensPequenas/Palestra2.webp">
+                <img class="Apresentações" src="Imagens/Palestra2.webp" alt="Palestras">
+            </picture><picture loading="lazy">
+                <source media="(max-width: 650px)" srcset="Imagens/ImagensPequenas/Palestra3.webp">
+                <img class="Apresentações" src="Imagens/Palestra3.webp" alt="Palestras">
+            </picture>
         </div>
         <!-- <div id="Integrantes">
             <h2 id="Opção5">Integrantes da turma</h2>
@@ -366,13 +406,13 @@
     </main>
     <footer>
         <div id="LogoRedesSociais">
-            <div id="Logo"><a rel="noopener" href="https://www.espro.org.br/" target="_blank" target="_blank"><img src="Ícones/LogoEspro.png" alt="Logo Espro" loading="lazy"></a></div>
+            <div id="Logo"><a rel="noopener" href="https://www.espro.org.br/" target="_blank" target="_blank"><img src="Ícones/LogoEspro.webp" alt="Logo Espro" loading="lazy"></a></div>
             <div id="RedesSociais">
-                <a rel="noopener" href="https://www.instagram.com/esprooficial/" target="_blank" id="Instagram"><img src="Ícones/Instagram.png" alt="Instagram" loading="lazy"><a>
-            <a rel="noopener" href="https://www.facebook.com/esprooficial" target="_blank"><img src="Ícones/Facebook.png" alt="Facebook" loading="lazy"></a>
-            <a rel="noopener" href="https://www.linkedin.com/company/esprooficial/" target="_blank"><img src="Ícones/Linkedin.png" alt="Linkedin" loading="lazy"></a>
-            <a rel="noopener" href="https://twitter.com/esprooficial" target="_blank"><img src="Ícones/Twitter.png" alt="Twitter" loading="lazy"></a>
-            <a rel="noopener" href="https://www.youtube.com/user/EsproOficial" target="_blank"><img src="Ícones/Youtube.png" alt="YouTube" loading="lazy"></a>
+                <a rel="noopener" href="https://www.instagram.com/esprooficial/" target="_blank" id="Instagram"><img src="Ícones/Instagram.webp" alt="Instagram" loading="lazy"><a>
+            <a rel="noopener" href="https://www.facebook.com/esprooficial" target="_blank"><img src="Ícones/Facebook.webp" alt="Facebook" loading="lazy"></a>
+            <a rel="noopener" href="https://www.linkedin.com/company/esprooficial/" target="_blank"><img src="Ícones/Linkedin.webp" alt="Linkedin" loading="lazy"></a>
+            <a rel="noopener" href="https://twitter.com/esprooficial" target="_blank"><img src="Ícones/Twitter.webp" alt="Twitter" loading="lazy"></a>
+            <a rel="noopener" href="https://www.youtube.com/user/EsproOficial" target="_blank"><img src="Ícones/Youtube.webp" alt="YouTube" loading="lazy"></a>
             </div>
         </div>
         <div id="Creditos">
